kubernetes/infra/databases/postgres/pgadmin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: pgAdmin
    gethomepage.dev/description: PostgreSQL management tool.
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: pgadmin.png
    gethomepage.dev/pod-selector: >-
      app in (
        pgadmin
      )
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - &host pgadmin.local.solonsstuff.com
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 5050
